--- a/13/13.tex
+++ b/13/13.tex
@@ -49,7 +49,7 @@
 \]
 
 \begin{center}
-	\textbf{Квадратичные и кубические четырехугольные КЭ из Серендипова семейства}
+	\textbf{Квадратичные и кубические четырехугольные КЭ из Сирендипова семейства}
 \end{center}
 \[
 \begin{cases}
